--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -115,7 +115,7 @@ Leicester LE1 9BH United Kingdom\\[.2cm]
 %%\hrule
 \section*{Areas of Interest}
 %Design of Digital Musical Instruments (DMIs) • Real-time Interactive Systems for Music Performance • Human-Computer Interaction • Interaction Design • Tangible, Physical \& Social Computing • Computer-Supported Collaborative, Participatory \& Improvisation Music • Live Coding • Real-time Music Information Retrieval and Machine Learning • Multichannel Spatialization • Generative \& Algorithmic Music • Immersive Sound Experiences • Women in Music Tech • Arts \& Social Sciences Research Methods • STEAM Education • Data Visualization • Creative Programming
-Sound and Music Computing • New Interfaces for Musical Expression • Human-Computer Interaction • Tangible Interaction • Computer-Supported Collaborative Music • Live Coding • Real-time Music Information Retrieval and Machine Learning • Generative \& Algorithmic Music • Spatial Audio • Women in Music Tech • STEAM Education • Data Visualization • Data Science • Creative Computing • Network Music • Web Audio • Audio Electronics • Audio DSP • Creative AI
+Sound and Music Computing • New Interfaces for Musical Expression • Human-Computer Interaction • Tangible Interaction • Computer-Supported Collaborative Music • Live Coding • Music Information Retrieval • Machine Learning • Generative \& Algorithmic Music • Spatial Audio • Women in Music Tech • STEAM Education • Data Visualization • Data Science • Creative Computing • Network Music • Web Audio • Audio Electronics • Audio DSP • Creative AI • Sonic Arts
 
 %\hrule
 \section*{Education}
@@ -310,14 +310,14 @@ Total Euro Amount: 3,000 \euro
 \noindent
 
 \textbullet \- \href{http://open.academia.edu/AnnaXambo}{Academia.edu}\\
-\textbullet \- \href{https://app.cristin.no/persons/show.jsf?id=997893}{CRISTIN (Current Research Information System in Norway)}\\
+%\textbullet \- \href{https://app.cristin.no/persons/show.jsf?id=997893}{CRISTIN (Current Research Information System in Norway)}\\
 \textbullet \- \href{https://dora.dmu.ac.uk/browse?type=author&value=Xambo,\%20Anna}{DORA (De Montfort Open Research Archive)}\\
 \textbullet \- \href{https://scholar.google.com/citations?user=yi3WXM8AAAAJ}{Google Scholar}\\
 \textbullet \- \href{http://oro.open.ac.uk/view/person/ax22.html}{Open Research Online}\\
 \textbullet \- \href{https://orcid.org/0000-0003-2333-6941}{ORCID}\\
 \textbullet \- \href{http://www.researchgate.net/profile/Anna_Xambo}{ResearchGate}\\
+\textbullet \- \href{https://www.scopus.com/authid/detail.uri?authorId=36642886000}{SCOPUS}\\
 \textbullet \- \href{https://www.semanticscholar.org/author/Anna-Xamb\%C3\%B3/1915531}{Semantic Scholar}\\
-\textbullet \- \href{https://www.scopus.com/authid/detail.uri?authorId=36642886000}{SCOPUS}
 \textbullet \- \href{https://publons.com/researcher/3980818/anna-xambo}{Web of Science}
 %[1.2cm]%hack
 
@@ -342,13 +342,14 @@ Total Euro Amount: 3,000 \euro
 
 \subsection*{Peer-Reviewed Journal Special Issues}
 \noindent
+\years{2023}\textbf{Xambó, A.}, Roma, G., Magnusson, T. (eds.) (Forthcoming). Live Coding Sonic Creativities. \emph{Organised Sound}, 28(2).\\
 \years{2020}\textbf{Xambó, A.},  Martín, S. R., Roma, G. (eds.) (2020). JAES Special Issue on Web Audio. \emph{Journal of Audio Engineering Society}, 68(10).
 
 
 \subsection*{Journal Articles}
 \noindent
-{\years{2021b}Roma, G., \textbf{Xambó, A.}, Green, O., Tremblay, P.A. (Submitted) ``A General Framework for Visualization of Sound Collections in Musical Interfaces''.\\
-{\years{2021a}\textbf{Xambó, A.} (Submitted) ``Virtual Agents in Live Coding: A Short Review''. \emph{e-Contact!}, (online journal).\\
+{\years{2021b}\textbf{Xambó, A.} (Submitted) ``Virtual Agents in Live Coding: A Short Review''. \emph{e-Contact!}, (online journal).\\
+{\years{2021a}Roma, G., \textbf{Xambó, A.}, Green, O., Tremblay, P.A. (2021) ``A General Framework for Visualization of Sound Collections in Musical Interfaces''. \emph{Applied Sciences}. 11(24):11926.\\
 {\years{2020a}\textbf{Xambó, A.}, Støckert, R., Jensenius, A.R. and Saue, S. ``Learning to Code Through Web Audio: A Team-Based Learning Approach''. \emph{Journal of Audio Engineering Society}, 68(10), pp. 727--737. \emph{Special Issue on Web Audio}.}\\
 \years{2019}\textbf{Xambó, A.}, Lerch, A., Freeman, J. “Music Information Retrieval in Live Coding: A Theoretical Framework". \emph{Computer Music Journal}, 42(4), Winter 2018, pp. 9--25.\\
 \years{2018b}Roma, G. and \textbf{Xambó, A.}, Freeman, J. (2018). “User-independent Accelerometer Gesture Recognition for Participatory Mobile Music". \emph{Journal of Audio Engineering Society}, 66(6), pp. 430--438.\\
@@ -425,6 +426,12 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \years{2008}\textbf{Xambó, A.} (2008). ``Interfaces for Sketching Musical Compositions''. Master thesis. Unpublished. UPF. Barcelona, Spain\\ 
 \years{2004}\textbf{Xambó, A.}, Martos, E. (2004). ``Crossmedia Infantil: Estudi sobre les noves tecnologies i la comunicació audiovisual a l'escola infantil i primària'' (Report of New Technologies and Audiovisual Communication in the Primary Education). Report. Unpublished. Supported by Fundació Caixa de Sabadell. In collaboration with UB. Barcelona, Spain.
 
+\subsection*{Book Reviews}
+\noindent
+
+\years{2021}\textbf{Xambó, A.} (2021). ``Book Review: \emph{Thor Magnusson, Sonic Writing: Technologies of Material, Symbolic, and Signal Inscriptions. New York: Bloomsbury Academic, 2019. ISBN: 9781501313851. DOI: https://doi.org/10.5040/9781501313899}''. \emph{Organised Sound}, 26:3, pp. 430–433.\\ 
+
+
 \section*{Talks, Panels \& Oral Presentations}
 %\noindent
 
@@ -476,6 +483,7 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{Own Institution}
 \noindent
 
+\years{2021} \textsc{Oral Presenter}. (November 10, 2021). “Music performance with crowdsourced sounds: collaboration by chance". \emph{MUST5001 Aesthetics and Ideas in the Sonic Arts}. DMU, Leicester, UK.\\
 \years{2020} \textsc{Oral Presenter}. (November 25, 2020). “Music performance with crowdsourced sounds: collaboration by chance". \emph{MUST5001 Aesthetics and Ideas in the Sonic Arts}. DMU, Leicester, UK.\\
 \years{2019c} \textsc{Oral Presenter} together with Jensenius, A., Jawad, K. and Aandahl, E. (May 23, 2019). “International joint Master's programme in Music, Communication \& Technology". \emph{Instituttseminar for sosiologi og statsvitenskap}. NTNU Department of Sociology and Political Science, Rockheim, Trondheim, Norway.\\
 \years{2019b} \textsc{Oral Presenter}. (March 25, 2019). “Summary of my research and teaching 2018-2019". \emph{Faglig Forum}. Music Technology, NTNU, Trondheim, Norway.\\
@@ -609,7 +617,7 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{Solo Performances}
 \noindent
 
-\years{2021e}\textbf{Xambó, A.} (November 10, 2021). `Magnets (live coding piece)''. \emph{Concert PACE 1 Live Music from MTI2. Works by Simon Emmerson, Anna Xambó Sedó, John Richards, and Leigh Landy"}. EMS 2021. Leicester, UK.\\
+\years{2021e}\textbf{Xambó, A.} (November 10, 2021). `Magnets (live coding piece)''. \emph{Concert PACE 1 Live Music from MTI2. Works by Simon Emmerson, Anna Xambó Sedó, John Richards, and Leigh Landy"}. Electroacoustic Music Studies 2021. Leicester, UK.\\
 \years{2021d}\textbf{Xambó, A.} (July 6, 2021). ``Live Coding with Crowdsourced Sounds and A Virtual Agent Companion''. \emph{WAC 21}. Barcelona, Spain. Online event. Streaming from Sheffield, UK.\\
 \years{2021c}\textbf{Xambó, A.} (June 17, 2021). ``A Live Coding Session With the Cloud and a Virtual Agent''. \emph{NIME 21}. Shanghai, China. Online event. Streaming from Sheffield, UK.\\
 \years{2021b}\textbf{Xambó, A.} (May 6, 2021). ``Sonic Haikus''. \emph{ARTIFICIA Festival}. Online event. Barcelona, Spain.\\
@@ -633,7 +641,7 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 
 \subsection*{Collaborative Performances}
 \noindent
-\years{2021b}Goudarzi, V., \textbf{Xambó, A.} (November 21, 2021). “immerse in the lake" (online performance). \emph{Jefferson Park EXP}. Chicago, IL, USA. Streaming from Sheffield, UK.\\
+\years{2021b}\textbf{Xambó, A.}, Goudarzi, V. (November 21, 2021). “immerse in the lake" (online performance). \emph{Jefferson Park EXP}. Chicago, IL, USA. Streaming from Sheffield, UK.\\
 \years{2021a}Goudarzi, V., \textbf{Xambó, A.} (September 24, 2021). “Livesourcing: Audience Participation in a Live Coding Performance" (online performance). \emph{Ear Taxi Festival}. Chicago, IL, USA. Streaming from Sheffield, UK.\\
 \years{2020}Schroeder, F., Meireles, M., Mannone, M., Papadomanolaki, M., Brown, N., Stolfi, A., Alarcón, X., \textbf{Xambó, A.} (July 28, 2020). “Absurdity" (telematic performance by the Female Laptop Orchestra (FLO)). \emph{Physically Distant \#2: More Online Talks on Telematic Performance}. Streaming from Sheffield, UK.\\
 \years{2019}Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. (December 4, 2019). “Trondheim EMP Repository processing". \emph{WAC 2019}. Rockheim, Trondheim, Norway.\\
@@ -740,7 +748,7 @@ Collaborators: Urtzi Grau (curator), Ana Otero (artistic director).
 
 \years{10/2019}Course: \emph{MCT4000 Music Communication and Technology)} \# Students: $\sim$14. \\
 Master of Music, Communication and Technology (MCT), Norwegian University of Science and Technology (NTNU), Trondheim, Norway.\\ 
-Role: Coordination of this 15-credit course which includes 7 modules.\\
+Role: Coordination of a 15-credit course which includes 7 modules.\\
 \years{10/2019}Course: \emph{MCT4000 Human-Computer Interaction Lectures (2nd edition)} (8 h). \# Students: $\sim$14. \\
 Master of Music, Communication and Technology (MCT), Norwegian University of Science and Technology (NTNU), Trondheim, Norway.\\ 
 Role: Creation of syllabus, creation of content, instruction and assessment.\\
@@ -764,7 +772,9 @@ Role: Creation of syllabus, creation of content, instruction and assessment.
 \subsection*{Undergraduate Courses}
 \noindent
 
-\years{10/2021--12/2021}Course: \emph{MATD3009 Advanced Digital Signal Processing Music} (30 h). \# Students: $\sim$4. \\
+\years{01/2022--04/2022}Course: \emph{MATD3039 Advanced Musical Electronics} (30 h). \# Students: $\sim$7. \\
+De Montfort University, Leicester, UK.\\ 
+\years{10/2021--12/2021}Course: \emph{MATD3009 Advanced Digital Signal Processing Music} (30 h). \# Students: $\sim$5. \\
 De Montfort University, Leicester, UK.\\ 
 \years{10/2021--12/2021}Course: \emph{MATD2004 Further Digital Signal Processing} (30 h). \# Students: $\sim$13. \\
 De Montfort University, Leicester, UK.\\ 
@@ -868,7 +878,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \years{01/2020--07/2020}Master thesis supervisor of Karolina Jawad. Master thesis title: \emph{``Gatekeepers by Design? Gender HCI for Audio and Music Hardware''}. Master programme: Music Communication Technology, NTNU. Our publication at ICLI '20 (see Peer-Reviewed Conference Papers) has inspired this work.\\
 \years{01/2018--08/2018}Master thesis co-advisor of Tayjo Padmini Vaduru. Master thesis title: \emph{``Moodscape Generator: Automated Generation of Soundscapes''}. Computer Science, QMUL.\\
 \years{09/2015--05/2016}Co-advisor of Marc Huet and Travis Gasque (master's students in Digital Media, School of Literature, Media, and Communication) and Anna Weisling (PhD student in Digital Media, School of LMC) for their graduate design project TuneTable. This work has been part of Brian Magerko’s Digital Media studio course at Georgia Tech. From this work we have published at TEI '17 (see Peer-Reviewed Conference Papers) and we have informed a successful and competitive NSF-funded grant (Advancing Informal STEM Learning Grant).\\
-\years{09/2015--05/2017}Co-advisor of Pratik Shah (master student in Human-Centered Computing, School of Interactive Computing) with the research and design on adding collaborative features to EarSketch, an online platform for learning code by making music. This work has been part of the design and development of the NSF-funded project EarSketch, led by Jason Freeman. From this work we have published at the conferences ICLI '16 and AM '17, and also at the AES journal in 2018 (see Peer-Reviewed Conference Papers).\\
+\years{09/2015--05/2017}Co-advisor of Pratik Shah (master student in Human-Centered Computing, School of Interactive Computing) with the research and design on adding collaborative features to EarSketch, an online platform for learning code by making music. This work has been part of the design and development of the NSF-funded project EarSketch, led by Jason Freeman. From this work we have published at the conferences ICLI '16 and AM '17, and also at the AES journal in 2018 (see Peer-Reviewed Conference Papers).
 
 \subsection*{Undergraduate Students}
 \years{09/2021--06/2022}Ongoing supervision of three L6 undergraduate students in music technology for their final research projects.
@@ -880,7 +890,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \section*{Assessment}
 \noindent
 
-\years{09/2021}External PhD examiner for Joaquín Roberto Díaz Durán. PhD thesis title: \emph{"Interfaz Cíborg: Dispositivo interactivo para reflexionar la relación arte, tecnología y cuerpo en la performance"}. PhD programme: Investigación en Humanidades, Artes y Educación (\emph{Research in Humanities, Arts and Education}), Facultad de Bellas Artes de Cuenca, Universidad de Castilla - La Mancha, Spain.\\
+\years{09/2021}External PhD examiner for Joaquín Roberto Díaz Durán. PhD thesis title: \emph{"Interfaz Cíborg: Dispositivo interactivo para reflexionar la relación arte, tecnología y cuerpo en la performance"} (\emph{Cyborg interface: Interactive device to reflect on the relationship between art, technology and the body in performance}). PhD programme: Investigación en Humanidades, Artes y Educación (\emph{Research in Humanities, Arts and Education}), Facultad de Bellas Artes de Cuenca, Universidad de Castilla - La Mancha, Spain.\\
 \years{09/2021}External PhD examiner for Jack Armitage. PhD programme: Media \& Arts Technologies, Queen Mary University of London, UK. PhD thesis title: \emph{"Subtlety and Detail in Digital Musical Instrument Design"}.\\
 \years{02/2021}PhD review (midway assessment) for Sam Topley, PhD programme: DMU/Midlands4Cities. Leicester, UK.\\
 \years{05/2020}External assessor, IMV PhD Midway Assessment for Qichao Lan, Department of Musicology, Faculty of Humanities, University of Oslo, Norway.\\
@@ -904,7 +914,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \subsection*{Blogging}
 \noindent
 
-\years{06/2020--present}\href{https://mirlca.dmu.ac.uk}{MIRLCAuto}, the website and blog of the research project \emph{MIRLCAuto: A Virtual Agent for Music Information Retrieval in Live Coding}. Creator and Author.\\ 
+\years{06/2020--2021}\href{https://mirlca.dmu.ac.uk}{MIRLCAuto}, the website and blog of the research project \emph{MIRLCAuto: A Virtual Agent for Music Information Retrieval in Live Coding}. Creator and Author.\\ 
 \years{09/2018--12/2019}\href{http://wonomute.no}{Women Nordic Music Technology}, the website and blog of the WoNoMute organization. Co-Creator and Coordinator.\\ 
 \years{08/2018--12/2019}\href{https://mct-master.github.io}{MCT master blog}, the blog of the MCT master. Co-Creator and Co-Coordinator.\\ 
 \years{05/2017--07/2018}\href{https://www.audiocommons.org}{Audio Commons}, the blog of the EU-funded project Audio Commons. Coordinator, Reviewer and Author.\\ 
@@ -1011,7 +1021,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \subsection*{Journal Reviewer}
 \noindent
 
-\years{2019b}\emph{Computer Music Journal}. MIT Press Journals (2019, 2020).\\
+\years{2019b}\emph{Computer Music Journal}. MIT Press Journals (2019--2020).\\
 \years{2019a}\emph{Arts}. MDPI.\\
 \years{2018d}\emph{PLOS One}. Public Library of Science.\\
 \years{2018c}\emph{British Journal of Educational Technology}. Wiley.\\
@@ -1035,7 +1045,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 %\years{2018b}(July 4, 2018) \emph{The Disturbing Discussion about Innovation} with Nicolas d'Alessandro (panelist), Tom Mitchell (panelist), Anna Xambó (panelist), and Matthias Strobel (moderator). Wallifornia MusicTech Hackathon. Liège, Belgium.\\
 %\years{2018a}(June 6, 2018) \emph{Future, Democratization, and Globalization of NIMEs} with Onyx Ashanti (panelist), Peter Nyboer (panelist), Anna Xambó (panelist), Pamela Z (panelist) and R. Benjamin Knapp (moderator). NIME '18. Moss Arts Center: Anne and Ellen Fife Theatre. Blacksburg, VA, USA.
 
-\subsection*{Coach}
+\subsection*{Hackathon Coach}
 \noindent
 
 \years{2018}(July 4, 2018) Wallifornia MusicTech Hackathon. Liège, Belgium.
@@ -1102,7 +1112,7 @@ Operating Systems: OS X, Windows and Linux desktop (Ubuntu).\\
 Programming: Actionscript, Assembly (basic level), C, CSS, Java, JavaScript, jQuery, MySQL, PHP, Python, Web Audio, XML.\\
 Scientific Apps: MATLAB, Octave, R, SPSS.\\
 Version Control Systems: CVS, Git, Subversion.\\
-Music \& Audio Apps: DAWs (Ableton Live, Cubase, Reaper, Logic Pro), Max/MSP, PureData, SuperCollider, wave editors (Audacity, SoundForge, WaveEditor), audio measurement \& test (Lindos).\\
+Music \& Audio Apps: DAWs (Ableton, Cubase, Live, Logic Pro, Reaper), Max/MSP, PureData, SuperCollider, wave editors (Audacity, SoundForge, WaveEditor), audio measurement \& test (Lindos).\\
 Text \& Multimedia Analysis Apps: ELAN, MAXQDA, NVivo, VCode.\\
 Other Apps: Graphics and multimedia authoring apps (AfterEffects, Blender, Dreamweaver, Final Cut Pro, Flash, Freehand, Illustrator, InDesign, Photoshop, Premiere, Processing, Combustion, 3DMax), LaTeX, MS Office suite. CMS (Drupal, WordPress). Static site generators (Jekyll, 11ty). Code editors (Atom, Visual Studio Code).\\
 Online Learning Platforms: Blackboard, Canvas, Teams.\\
