--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -766,15 +766,15 @@ Master of Music, Communication and Technology (MCT), Norwegian University of Sci
 Role: Creation of syllabus, creation of content, instruction and assessment.\\
 \years{10/2018}Course: \emph{MCT4000 Physical Computing Workshop} (28 h). \# Students: $\sim$15. \\
 Master of Music, Communication and Technology (MCT), Norwegian University of Science and Technology (NTNU), Trondheim, Norway.\\ 
-Role: Creation of syllabus, creation of content, instruction and assessment.
+Role: Creation of syllabus, creation of content, instruction and assessment.\\
 
 
 \subsection*{Undergraduate Courses}
 \noindent
 
-\years{01/2022--04/2022}Course: \emph{MATD3039 Advanced Musical Electronics} (30 h). \# Students: $\sim$7. \\
+\years{01/2022--04/2022}Course: \emph{MATD3039 Advanced Musical Electronics} (30 h). \# Students: $\sim$4. \\
 De Montfort University, Leicester, UK.\\ 
-\years{10/2021--12/2021}Course: \emph{MATD3009 Advanced Digital Signal Processing Music} (30 h). \# Students: $\sim$5. \\
+\years{10/2021--12/2021}Course: \emph{MATD3009 Advanced Digital Signal Processing Music} (30 h). \# Students: $\sim$4. \\
 De Montfort University, Leicester, UK.\\ 
 \years{10/2021--12/2021}Course: \emph{MATD2004 Further Digital Signal Processing} (30 h). \# Students: $\sim$13. \\
 De Montfort University, Leicester, UK.\\ 
@@ -1048,6 +1048,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \subsection*{Hackathon Coach}
 \noindent
 
+\years{2022}(January 29-30, 2022) On-the-Fly Live Coding Hacklab. ZKM, Karlsruhe, Germany.\\
 \years{2018}(July 4, 2018) Wallifornia MusicTech Hackathon. Liège, Belgium.
 
 \subsection*{Jury Member}
@@ -1117,7 +1118,7 @@ Text \& Multimedia Analysis Apps: ELAN, MAXQDA, NVivo, VCode.\\
 Other Apps: Graphics and multimedia authoring apps (AfterEffects, Blender, Dreamweaver, Final Cut Pro, Flash, Freehand, Illustrator, InDesign, Photoshop, Premiere, Processing, Combustion, 3DMax), LaTeX, MS Office suite. CMS (Drupal, WordPress). Static site generators (Jekyll, 11ty). Code editors (Atom, Visual Studio Code).\\
 Online Learning Platforms: Blackboard, Canvas, Teams.\\
 Hardware: Arduino, Bela, Lindos, Raspberry Pi.\\
-Circuit simulators: Tinkercad, OrCAD.
+Circuit simulators: Fritzing, Tinkercad, OrCAD.
 
 %\vspace{1cm}
 \vfill{}
