--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -194,7 +194,7 @@ Dissertation: \emph{Interfaces for Sketching Musical Compositions}.\\
 \years{2019b} \textsc{The EUNIS DØRUP E-Learning Award} to Robin Støckert, Alexander Refsum Jensenius, Anna Xambó and Øyvind Brandtsegg. NTNU, Trondheim, Norway.\\
 %\years{2019a} \textsc{Travel grant for European research and promotion} (30,000 kr, approx. 3,000 \euro). NTNU, Trondheim, Norway.\\
 %\years{2018--2019} \textsc{3-year Startup Grant (Startpakke)} (250,000 kr, approx. 25,000 \euro), awarded to women in permanent academic positions in a scientific field with underrepresentation of women. NTNU, Trondheim, Norway.\\
-\years{2017} NCWIT Engagement Excellence Award (5,000 \$ cash award) to Greg Hendler, Léa Ikkache, Brandon Westergaard, Anna Xambó, Doug Edwards, Brian Magerko, and Jason Freeman (Earsketch), Georgia Tech.\\
+\years{2017} NCWIT Engagement Excellence Award (\$5,000 cash award) to Greg Hendler, Léa Ikkache, Brandon Westergaard, Anna Xambó, Doug Edwards, Brian Magerko, and Jason Freeman (Earsketch), Georgia Tech.\\
 \years{2016}\textsc{Women in Music Information Retrieval (WiMIR) grant}, awarded conference fee waiver to attend the ISMIR 2016 conference. New York University (NYU), New York.\\
 \years{10/2010--07/2013}\textsc{3-year Fully-Funded Full-Time OU PhD scholarship}. The Open University, Milton Keynes, UK.\\
 \years{03/2010--06/2010}\textsc{4-month Fully-Funded OU Visiting Research Studentship}. The Open University, Milton Keynes, UK.
@@ -215,7 +215,7 @@ Role: Creator \& Director.
 Funding body: DMU. \\
 Project: Development fund that is part of the FRL Programme.\\
 Role: Lead Researcher/Coordinator. \\
-Total Pound Amount: 1,000 \pounds \\
+Total Pound Amount: \pounds1,000 \\
 
 \years{04/2020-10/2021}\textsc{Human Data Interaction Network Plus/EPSRC Grant} \\
 Funding body: EPSRC. \\
@@ -223,20 +223,20 @@ Project: ``MIRLCAuto: A Virtual Agent for Music Information Retrieval in Live Co
 Role: PI. \\
 Partners: Music, Technology and Innovation - Institute for Sonic Creativity (MTI$^2$), De Montfort University; Leicester Hackspace; IKLECTIK; Phonos; l’ull cec. \\
 Collaborators: TOPLAP Barcelona, FluCoMa, Freesound.\\
-Total Pound Amount: 10,000 \pounds \\
+Total Pound Amount: \pounds10,000 \\
 
 \years{08/2018-12/2019}\textsc{Start-up Package (Startpakke)} \\
 Funding body: NTNU. \\
-The start-up package is awarded to women in permanent academic positions in a scientific field with an underrepresentation of women to start their academic careers. With part of this funding, I co-founded and was chair of the organisation Women Nordic in Music Technology (\emph{WoNoMute}) (see Entrepreneurship). \\
+The start-up package is awarded to women in permanent academic positions to help them start their academic careers within a scientific field that has an underrepresentation of women. With part of this funding, I co-founded and was chair of the organisation Women Nordic in Music Technology (\emph{WoNoMute}) (see Entrepreneurship). \\
 Role: PI. \\
-Total Euro Amount: 250,000 kr, approx. 25,000 \euro \\
+Total Norwegian Krone Amount: kr250,000, approx. \euro25,000 \\
 
 \years{11/2003-10/2004}\textsc{Teaching innovation project grant} \\
 Funding body: Fundació Caixa de Sabadell. \\
-Project: ``Crossmedia infantil: Estudio sobre las nuevas tecnologías y la comunicación audiovisual en la escuela infantil y primaria (Crossmedia for Children: New Technologies and Audiovisual Communication in Primary Education)''.\\
+Project: ``Crossmedia infantil: Estudio sobre las nuevas tecnologías y la comunicación audiovisual en la escuela infantil y primaria (Crossmedia for Children: New Technologies and Audiovisual Communication in Primary Education).''\\
 Role: PI. \\
 Collaborators: Eladi Martos (Co-PI), UB. \\
-Total Euro Amount: 3,000 \euro
+Total Euro Amount: \euro3,000
 %Candidate’s Share: 50\% (1,500 \euro)
 
 \subsection*{Collaborator}
@@ -247,23 +247,23 @@ Project: ``Collaborative Research: Mixing Learning Experiences for Computer Prog
 Organization: Georgia Tech Research Corporation. \\
 Role: Postdoctoral Fellow and Co-Writer of the grant proposal. \\
 Collaborators: Brian Magerko (PI), Jason Freeman (Co-PI), Mike Horn (Co-PI).\\
-Total Dollar Amount: 2,517,690.00 \$
+Total Dollar Amount: \$2,517,690.00 
 
 \subsection*{Fundraiser}
 
 \years{2019b}\textsc{Web Audio Conference 2019} \\
 Role: Conference chair. \\
-Total Fundraised Norwegian Krone Amount: 120,000 kr (approx. 12,000 \euro)\\[.1cm]
+Total Fundraised Norwegian Krone Amount: kr120,000 (approx. \euro12,000)\\[.1cm]
 \years{2019a}\textsc{Internal funding for a COST application} \\
 Role: Project leader. \\
 Travel grant for European research and promotion.\\
-Total Fundraised Norwegian Krone Amount: 30,000 kr (approx. 3,000 \euro)\\[.1cm]
+Total Fundraised Norwegian Krone Amount: kr30,000 (approx. \euro3,000)\\[.1cm]
 \years{2017--2018}\textsc{Female Laptop Orchestra + WoNoMute +YSWN + Sonora: seminar and concert at SARC} \\
 Role: Co-organizer and participant of the event. \\
-Total Fundraised British Pound Amount: 2,000 \textsterling\\[.1cm]
+Total Fundraised British Pound Amount: \pounds2,000 \\[.1cm]
 \years{05/2016--05/2017}\textsc{Women in Music Tech} \\
 Role: Co-Founder \& Co-Chair of the organization. \\
-Total Fundraised Dollar Amount: 11,450 \$
+Total Fundraised Dollar Amount: \$11,450 
 %\years{08/2016--05/2017}\emph{2016-2017 Academic Year}\\
 %Funding body: School of Music, Georgia Tech. \\
 %Total Dollar Amount: \$2,500\\[.1cm]
@@ -293,7 +293,7 @@ Funding body: Departament de Cultura de la Generalitat de Catalunya (Department 
 Project: ``Transdata Pr.''.  \\
 Role: Creator, Director \& Video Editor.\\
 Collaborators: Gerard Roma (music), Oscar Abril Ascaso (essay). \\
-Total Euro Amount: 3,000 \euro\\ 
+Total Euro Amount: \euro3,000\\ 
 %Candidate’s Share: 50\% (1,500 \euro)\\[0.5cm]%hack
 
 \years{09/1998--08/1999}\textsc{Audiovisual production grant} \\
@@ -301,7 +301,7 @@ Funding body: Departament de Cultura de la Generalitat de Catalunya (Department 
 Project: ``Mitösömä''.  \\
 Role: Creator, Director \& Animation Editor.\\
 Collaborators: Gerard Roma (music). \\
-Total Euro Amount: 3,000 \euro
+Total Euro Amount: \euro3,000 
 %Candidate’s Share: 50\% (1,500 \euro)
 
 
@@ -617,7 +617,10 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{Solo Performances}
 \noindent
 
-\years{2021e}\textbf{Xambó, A.} (November 10, 2021). `Magnets (live coding piece)''. \emph{Concert PACE 1 Live Music from MTI2. Works by Simon Emmerson, Anna Xambó Sedó, John Richards, and Leigh Landy"}. Electroacoustic Music Studies 2021. Leicester, UK.\\
+\years{2022c}\textbf{Xambó, A.} (March 19, 2022). ``Make Noise Not War (live coding session)''. \emph{Algorave 10th Birthday Party}. Online event. Streaming from Sheffield, UK.\\
+\years{2022b}\textbf{Xambó, A.} (March 11, 2022). ``detuning a tuning (live coding piece)''. \emph{BEAST @ Centrala: Anna Xambó Sedó, Milad K. Mardakheh}. Centrala, Birmingham, UK.\\
+\years{2022a}\textbf{Xambó, A.} (March 8, 2022). ``Algonoise feat. Olympe de Gauges (live coding session)''. \emph{LIVECODERA a global live coding community gathering on International Women’s Day}. Online event. Streaming from Sheffield, UK.\\
+\years{2021e}\textbf{Xambó, A.} (November 10, 2021). ``Magnets (live coding piece)''. \emph{Concert PACE 1 Live Music from MTI2. Works by Simon Emmerson, Anna Xambó Sedó, John Richards, and Leigh Landy}. Electroacoustic Music Studies 2021. Leicester, UK.\\
 \years{2021d}\textbf{Xambó, A.} (July 6, 2021). ``Live Coding with Crowdsourced Sounds and A Virtual Agent Companion''. \emph{WAC 21}. Barcelona, Spain. Online event. Streaming from Sheffield, UK.\\
 \years{2021c}\textbf{Xambó, A.} (June 17, 2021). ``A Live Coding Session With the Cloud and a Virtual Agent''. \emph{NIME 21}. Shanghai, China. Online event. Streaming from Sheffield, UK.\\
 \years{2021b}\textbf{Xambó, A.} (May 6, 2021). ``Sonic Haikus''. \emph{ARTIFICIA Festival}. Online event. Barcelona, Spain.\\
@@ -687,6 +690,8 @@ Collaborator: Gerard Roma.
 \subsection*{Code}
 \noindent
 
+%\years{2022--present}personic.\\
+%Role: Concept and implementation.\\
 \years{2020--present}MIRLCa: \href{https://github.com/mirlca/code}{github.com/mirlca/code}.\\
 Role: Concept and implementation.\\
 \years{2019--present}MIRLC 2.0.\\
@@ -873,15 +878,18 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \section*{Supervision}
 %\noindent
 
+\subsection*{PhD Students}
+\years{04/2022--present}2nd supervisor of Eva Kára. DMU.
+
 \subsection*{Master Students}
 \years{07/2021--10/2021}Creative portfolio \& short dissertation (master thesis) co-supervisor of Harri Bettsworth. Master thesis title: \emph{``Exploring How Uncanny Sound Can Trigger Fear In Video Game''}. Master programme: Music Technology and Innovation, DMU. \\
-\years{01/2020--07/2020}Master thesis supervisor of Karolina Jawad. Master thesis title: \emph{``Gatekeepers by Design? Gender HCI for Audio and Music Hardware''}. Master programme: Music Communication Technology, NTNU. Our publication at ICLI '20 (see Peer-Reviewed Conference Papers) has inspired this work.\\
+\years{01/2020--07/2020}Master thesis supervisor of Karolina Jawad. Master thesis title: \emph{``Gatekeepers by Design? Gender HCI for Audio and Music Hardware''}. Master programme: Music Communication Technology, NTNU. Our publication at ICLI '20 (see Peer-Reviewed Conference Papers) and the work at WoNoMute has inspired this work.\\
 \years{01/2018--08/2018}Master thesis co-advisor of Tayjo Padmini Vaduru. Master thesis title: \emph{``Moodscape Generator: Automated Generation of Soundscapes''}. Computer Science, QMUL.\\
 \years{09/2015--05/2016}Co-advisor of Marc Huet and Travis Gasque (master's students in Digital Media, School of Literature, Media, and Communication) and Anna Weisling (PhD student in Digital Media, School of LMC) for their graduate design project TuneTable. This work has been part of Brian Magerko’s Digital Media studio course at Georgia Tech. From this work we have published at TEI '17 (see Peer-Reviewed Conference Papers) and we have informed a successful and competitive NSF-funded grant (Advancing Informal STEM Learning Grant).\\
 \years{09/2015--05/2017}Co-advisor of Pratik Shah (master student in Human-Centered Computing, School of Interactive Computing) with the research and design on adding collaborative features to EarSketch, an online platform for learning code by making music. This work has been part of the design and development of the NSF-funded project EarSketch, led by Jason Freeman. From this work we have published at the conferences ICLI '16 and AM '17, and also at the AES journal in 2018 (see Peer-Reviewed Conference Papers).
 
 \subsection*{Undergraduate Students}
-\years{09/2021--06/2022}Ongoing supervision of three L6 undergraduate students in music technology for their final research projects.
+\years{09/2021--06/2022}Ongoing supervision of two L6 undergraduate students in music technology for their MATT3000 Research Project: Abbey Young working on ``A Practice-based Analysis of Practical Workshops to Improve Gender Equality in Music Technology Education in the UK'' and Tolu Ikuyinminu working on ``Investigating the Positive and Negative Impacts of the `UK Drill' Genre on Generation Z''. 
 
 \section*{Mentoring}
 \years{08/2018--12/2019}Mentor and advisor of the members of the organization \emph{WoNoMute}, including the co-chair and research assistant Karolina Jawad, and the research assistants Mari Lesteberg and Ane Bjerkan.\\
@@ -890,6 +898,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \section*{Assessment}
 \noindent
 
+\years{02/2022}PhD review for Robin Foster, PhD programme: DMU. Leicester, UK.\\
 \years{09/2021}External PhD examiner for Joaquín Roberto Díaz Durán. PhD thesis title: \emph{"Interfaz Cíborg: Dispositivo interactivo para reflexionar la relación arte, tecnología y cuerpo en la performance"} (\emph{Cyborg interface: Interactive device to reflect on the relationship between art, technology and the body in performance}). PhD programme: Investigación en Humanidades, Artes y Educación (\emph{Research in Humanities, Arts and Education}), Facultad de Bellas Artes de Cuenca, Universidad de Castilla - La Mancha, Spain.\\
 \years{09/2021}External PhD examiner for Jack Armitage. PhD programme: Media \& Arts Technologies, Queen Mary University of London, UK. PhD thesis title: \emph{"Subtlety and Detail in Digital Musical Instrument Design"}.\\
 \years{02/2021}PhD review (midway assessment) for Sam Topley, PhD programme: DMU/Midlands4Cities. Leicester, UK.\\
