--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -87,8 +87,11 @@ bookmarks, colorlinks, breaklinks,
 %\exhyphenpenalty 1000
 %\widowpenalty 10000
 %\clubpenalty 10000
-%\interfootnotelinepenalty=10000
-
+%\interfootnotelinepenalty 10000
+%\usepackage[all]{nowidow}
+\widowpenalty=1000
+\clubpenalty=1000
+\hyphenpenalty=1000
 
 % DOCUMENT
 \begin{document}
@@ -159,7 +162,7 @@ Dissertation: \emph{Interfaces for Sketching Musical Compositions}.\\
 \years{2020}\textsc{Research Supervision} (with certificate). Instructors: Sally Ruane (module 1), Deborah Cartmell (module 2), Meera Warrier (module 3). DMU. Leicester, UK.\\
 \years{2018--2019}\textsc{Learning and Teaching in Higher Education} (with certificate). Instructors: Emma Kennedy (module 1), Alison Gilmour (module 2), Maren Thom (module 2). QMUL. London.\\
 \years{2018}\textsc{Women into Leadership}. Instructor: Lorraine Smith. QMUL. London.\\
-\years{2017}\textsc{Communication Skills for Teaching for International Faculty, Postdocs, and Visiting Scholars}. Instructor: Katherine Samford. Georgia Institute of Technology (Georgia Tech). Atlanta, GA, USA.
+\years{2017}\textsc{Communication Skills for Teaching for International Faculty, Postdocs, and Visiting Scholars} (with certificate). Instructor: Katherine Samford. Georgia Institute of Technology (Georgia Tech). Atlanta, GA, USA.
 
 %%\hrule
 \section*{Employment}
@@ -210,6 +213,12 @@ Role: Creator \& Director.
 %\noindent
 
 \subsection*{Principal Investigator}
+
+\years{05/2022--06/2022}\textsc{Living in a Digital Society - Spotlight Funding Round 2} \\
+Funding body: DMU. \\
+Project: Development fund for research grant preparation.\\
+Role: Lead Researcher/Coordinator. \\
+Total Pound Amount: \pounds2,720 \\
 
 \years{11/2021--06/2022}\textsc{Future Research Leaders 8 -- Development fund} \\
 Funding body: DMU. \\
@@ -348,7 +357,7 @@ Total Euro Amount: \euro3,000
 
 \subsection*{Journal Articles}
 \noindent
-{\years{2021b}\textbf{Xambó, A.} (Submitted) ``Virtual Agents in Live Coding: A Short Review''. \emph{e-Contact!}, (online journal).\\
+{\years{2021b}\textbf{Xambó, A.} (Forthcoming) ``Virtual Agents in Live Coding: A Short Review''. \emph{e-Contact!}, (online journal).\\
 {\years{2021a}Roma, G., \textbf{Xambó, A.}, Green, O., Tremblay, P.A. (2021) ``A General Framework for Visualization of Sound Collections in Musical Interfaces''. \emph{Applied Sciences}. 11(24):11926.\\
 {\years{2020a}\textbf{Xambó, A.}, Støckert, R., Jensenius, A.R. and Saue, S. ``Learning to Code Through Web Audio: A Team-Based Learning Approach''. \emph{Journal of Audio Engineering Society}, 68(10), pp. 727--737. \emph{Special Issue on Web Audio}.}\\
 \years{2019}\textbf{Xambó, A.}, Lerch, A., Freeman, J. “Music Information Retrieval in Live Coding: A Theoretical Framework". \emph{Computer Music Journal}, 42(4), Winter 2018, pp. 9--25.\\
@@ -363,6 +372,7 @@ Total Euro Amount: \euro3,000
 \subsection*{Peer-Reviewed Conference Papers}
 \noindent
 
+{\years{2022}\textbf{Xambó, A.}, Goudarzi, V. (Forthcoming) ``The Mobile Audience as a Digital Musical Persona in Telematic Performance''. \emph{Proceedings of the New Interfaces for Musical Expression (NIME '22)}. Waipapa Taumata Rau, Aotearoa / The University of Auckland, New Zealand.}\\
 {\years{2021}\textbf{Xambó, A.}, Roma, G., Roig, S., Solaz, E. (2021) ``Live Coding with the Cloud and a Virtual Agent''. \emph{Proceedings of the New Interfaces for Musical Expression (NIME '21)}. Shanghai, China.}\\
 {\years{2020b}\textbf{Xambó, A.}, Roma, G. (2020) ``Performing Audiences: Composition Strategies for Network Music using Mobile Phones''. \emph{Proceedings of the New Interfaces for Musical Expression (NIME '20)}. Birmingham, UK. pp. 55--60.}\\
 \years{2020a}Jawad, K., \textbf{Xambó, A.} (2020) ``How to Talk of Music Technology: An Interview Analysis Study of Live Interfaces for Music Performance among Expert Women''. In \emph{Proceedings of the International Conference on Live Interfaces (ICLI 2020)}. Trondheim, Norway. pp. 41--47.\\
@@ -393,6 +403,7 @@ Total Euro Amount: \euro3,000
 
 \subsection*{Peer-Reviewed Abstracts with Proceedings}
 \noindent
+\years{2022}Goudarzi, V., \textbf{Xambó, A.} (Forthcoming). ``Ear to Waipapa Taumata Rau''. In \emph{Proceedings of the New Interfaces for Musical Expression (NIME '22)}. Waipapa Taumata Rau, Aotearoa / The University of Auckland, New Zealand.}\\
 \years{2021b}\textbf{Xambó, A.} (2021). ``Live Coding with Crowdsourced Sounds and A Virtual Agent Companion''. In \emph{Proceedings of the Web Audio Conference 2021 (WAC '21)}. Barcelona, Spain.\\
 \years{2021a}\textbf{Xambó, A.} (2021). ``A Live Coding Session With the Cloud and a Virtual Agent''. In \emph{Proceedings of the New Interfaces for Musical Expression (NIME '21)}. Shanghai, China.}\\
 \years{2019b}Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. (2019). ``Trondheim EMP Repository processing''. In \emph{Proceedings of the Web Audio Conference 2019 (WAC '19)}. Trondheim, Norway. pp. 161--162.\\
@@ -429,7 +440,7 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{Book Reviews}
 \noindent
 
-\years{2021}\textbf{Xambó, A.} (2021). ``Book Review: \emph{Thor Magnusson, Sonic Writing: Technologies of Material, Symbolic, and Signal Inscriptions. New York: Bloomsbury Academic, 2019. ISBN: 9781501313851. DOI: https://doi.org/10.5040/9781501313899}''. \emph{Organised Sound}, 26:3, pp. 430–433.\\ 
+\years{2021}\textbf{Xambó, A.} (2021). ``Book Review: \emph{Thor Magnusson, Sonic Writing: Technologies of Material, Symbolic, and Signal Inscriptions. New York: Bloomsbury Academic, 2019. ISBN: 9781501313851. DOI: https://doi.org/10.5040/9781501313899}''. \emph{Organised Sound}, 26:3, pp. 430–433.
 
 
 \section*{Talks, Panels \& Oral Presentations}
@@ -438,6 +449,8 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{External}
 \noindent
 
+\years{2022b} \textsc{Invited Talk (online)} (May 27, 2022). "Betwixt and Between Sound-Based Music and Sound Design". \emph{Sound Design(ed) Futures: new realities, spaces, technologies}. Université Gustave Eiffel, Champs-sur-Marne, France.\\ 
+\years{2022a} \textsc{Invited Talk (online)} (April 25, 2022). "Data-Driven Sound-Based Music". \emph{AHRC Datasounds, datasets and datasense: Unboxing the hidden layers between musical data, knowledge and creativity}. University of York. York, UK.\\ 
 \years{2021h} \textsc{Keynote Speaker (online)} (July 5, 2021). \emph{Web Audio Conference 2021 (WAC 2021)}. Barcelona, Spain. \href{https://youtu.be/7SWu3txbg-w}{[video]}\\ 
 \years{2021g} \textsc{Oral Presenter (online)} together with Jawad, K.  (June 19, 2021). "Challenging the Status Quo - WoNoMute". \emph{Féminisme - Musique - Technologie / Rencontre ManiFeste-2021}. Centre Wallonie-Bruxelles, Paris, France. \href{https://youtu.be/jXmNvd9ty_o}{[video]}\\
 \years{2021f} \textsc{Oral Presenter (online)} (June 15, 2021). “Live Coding with the Cloud and a Virtual Agent". \emph{NIME '21}. 
@@ -534,7 +547,7 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \years{2010b} \textsc{Poster Presenter}. (December 21, 2010). Xambó, A., Laney, R., Dobbyn, C., Jordà, S. “Multi-touch Interaction Techniques for Collaborative Music Activities". \emph{DMRN+5: Digital Music Research Network One-day Workshop 2010}, Queen Mary, University of London. London.\\
 \years{2010a} \textsc{Poster Presenter}. (June 8, 2010). “Issues and Techniques for Collaborative Music Making on Multi-touch Surfaces". \emph{CRC PhD Student Conference 2010}, OU. Milton Keynes, UK.\\
 \years{2008b} \textsc{Poster Presenter}. (June 9--11, 2010). “Interfaces for Sketching Musical Compositions". \emph{SMC Summer School 2008}. Genoa, Italy.\\
-\years{2008a} \textsc{Poster Presenter} together with Roma, G. (June 6, 2008). “A Tabletop Waveform Editor for Live Performance". \emph{NIME '08}. Genoa, Italy.\\
+\years{2008a} \textsc{Poster Presenter} together with Roma, G. (June 6, 2008). “A Tabletop Waveform Editor for Live Performance". \emph{NIME '08}. Genoa, Italy.
 
 
 \subsection*{Workshops}
@@ -567,6 +580,7 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{Solo Albums}
 \noindent
 
+\years{Forthcoming}Anna Xambó. \emph{detuning a tuning} [FLAC/MP3 files]. Barcelona/Sheffield: Carpal Tunnel.\\
 \years{2018}Anna Xambó. \emph{H2RI} [FLAC/MP3 files]. Chicago (IL, USA): pan y rosas discos.\\
 \years{2013}peterMann. \emph{On the Go} [promo CD \& FLAC/MP3 files]. Barcelona: Carpal Tunnel.\\
 \years{2011}peterMann. \emph{init} [promo CD \& FLAC/MP3 files]. Barcelona: Carpal Tunnel.
@@ -644,6 +658,7 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 
 \subsection*{Collaborative Performances}
 \noindent
+\years{2022}Goudarzi, V., \textbf{Xambó, A.} (Forthcoming). ``Ear to Waipapa Taumata Rau'' (online performance). \emph{New Interfaces for Musical Expression (NIME '22)}. Waipapa Taumata Rau, Aotearoa / The University of Auckland, New Zealand.}\\
 \years{2021b}\textbf{Xambó, A.}, Goudarzi, V. (November 21, 2021). “immerse in the lake" (online performance). \emph{Jefferson Park EXP}. Chicago, IL, USA. Streaming from Sheffield, UK.\\
 \years{2021a}Goudarzi, V., \textbf{Xambó, A.} (September 24, 2021). “Livesourcing: Audience Participation in a Live Coding Performance" (online performance). \emph{Ear Taxi Festival}. Chicago, IL, USA. Streaming from Sheffield, UK.\\
 \years{2020}Schroeder, F., Meireles, M., Mannone, M., Papadomanolaki, M., Brown, N., Stolfi, A., Alarcón, X., \textbf{Xambó, A.} (July 28, 2020). “Absurdity" (telematic performance by the Female Laptop Orchestra (FLO)). \emph{Physically Distant \#2: More Online Talks on Telematic Performance}. Streaming from Sheffield, UK.\\
@@ -666,7 +681,8 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \section*{Mastering (other's work)}
 \noindent
 
-\years{2018}\emph{Noiselets} [FLAC/MP3 files]. Barcelona: Carpal Tunnel.
+\years{Forthcoming}\emph{Ana y las Romanoides (o de las telepatías transaurales)} [FLAC/MP3 files] by Ana María Romano G. Barcelona/Sheffield: Carpal Tunnel.\\
+\years{2018}\emph{Noiselets} [FLAC/MP3 files] by Various Artists (scmute, peterMann, Martin Hug, Faraldo, 0001, Miquel Parera, Urge to Kill). Barcelona: Carpal Tunnel.
 
 \section*{Other Creative Products}
 %\noindent
@@ -771,7 +787,7 @@ Master of Music, Communication and Technology (MCT), Norwegian University of Sci
 Role: Creation of syllabus, creation of content, instruction and assessment.\\
 \years{10/2018}Course: \emph{MCT4000 Physical Computing Workshop} (28 h). \# Students: $\sim$15. \\
 Master of Music, Communication and Technology (MCT), Norwegian University of Science and Technology (NTNU), Trondheim, Norway.\\ 
-Role: Creation of syllabus, creation of content, instruction and assessment.\\
+Role: Creation of syllabus, creation of content, instruction and assessment.
 
 
 \subsection*{Undergraduate Courses}
@@ -898,6 +914,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \section*{Assessment}
 \noindent
 
+\years{05/2022}External PhD examiner for Alejandro Iván Paz Ortiz. PhD thesis title: \emph{"On-the-fly Synthesizer Programming with Rule Learning"}. PhD degree in Computing, Universitat Politècnica de Catalunya - BarcelonaTech. Barcelona, Spain.\\
 \years{02/2022}PhD review for Robin Foster, PhD programme: DMU. Leicester, UK.\\
 \years{09/2021}External PhD examiner for Joaquín Roberto Díaz Durán. PhD thesis title: \emph{"Interfaz Cíborg: Dispositivo interactivo para reflexionar la relación arte, tecnología y cuerpo en la performance"} (\emph{Cyborg interface: Interactive device to reflect on the relationship between art, technology and the body in performance}). PhD programme: Investigación en Humanidades, Artes y Educación (\emph{Research in Humanities, Arts and Education}), Facultad de Bellas Artes de Cuenca, Universidad de Castilla - La Mancha, Spain.\\
 \years{09/2021}External PhD examiner for Jack Armitage. PhD programme: Media \& Arts Technologies, Queen Mary University of London, UK. PhD thesis title: \emph{"Subtlety and Detail in Digital Musical Instrument Design"}.\\
@@ -1013,30 +1030,31 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \years{2019a--2021}\emph{Audio Mostly} (2019, 2021).\\
 \years{2018}\emph{ACM Special Interest Group on Computer GRAPHics and Interactive Techniques (SIGGRAPH)} (2018).\\
 \years{2018}\emph{International Conference of the Learning Sciences} (2018).\\
-\years{2018--2020}\emph{International Society for Music Information Retrieval Conference} (2018--2020).\\
+\years{2018--2020}\emph{International Society for Music Information Retrieval Conference (ISMIR)} (2018--2021).\\
 \years{2017}\emph{ACM Creativity and Cognition} (2017).\\
 \years{2017}\emph{ACM Innovation and Technology in Computer Science Education} (2017).\\
 \years{2017}\emph{Co-Creation Workshop at International Conference on Computational Creativity} (2017).\\
 \years{2017--2018}\emph{International Computer Music Conference -- ICMC Music} (2017, 2018).\\
-\years{2016, 2020}\emph{International Conference on Live Interfaces} (2016, 2020).\\
+\years{2016, 2020}\emph{International Conference on Live Interfaces (ICLC)} (2016, 2020).\\
 \years{2016}\emph{ISSTA International Festival and Conference on Sound in the Arts, Science and Technology} (2016).\\
-\years{2016--2020}\emph{Web Audio Conference} (2016--2021).\\
-\years{2015--2020}\emph{ACM Special Interest Group on Computer-Human Interaction} (2015--2021).\\
+\years{2016--2020}\emph{Web Audio Conference (WAC)} (2016--2022).\\
+\years{2015--2020}\emph{ACM Special Interest Group on Computer-Human Interaction (CHI)} (2015--2021).\\
 \years{2013c}\emph{IEEE Interactive Tabletops and Surfaces} (2013).\\
 \years{2012--2018}\emph{ACM Designing Interactive Systems} (2012, 2016, 2018).\\
-\years{2012--2018}\emph{ACM Tangible, Embedded and Embodied Interaction} (2012--2018).\\
-\years{2011--2018}\emph{New Interfaces for Musical Expression} (2011--2018).
+\years{2012--2018}\emph{ACM Tangible, Embedded and Embodied Interaction (TEI)} (2012--2018).\\
+\years{2011--2018}\emph{New Interfaces for Musical Expression (NIME)} (2011--2018).
 
 \subsection*{Journal Reviewer}
 \noindent
 
+\years{2022}\emph{Personal and Ubiquitous Computing}. Springer.\\
 \years{2019b}\emph{Computer Music Journal}. MIT Press Journals (2019--2020).\\
 \years{2019a}\emph{Arts}. MDPI.\\
 \years{2018d}\emph{PLOS One}. Public Library of Science.\\
 \years{2018c}\emph{British Journal of Educational Technology}. Wiley.\\
 \years{2018b}\emph{Journal of New Music Research}. ScholarOne Manuscripts.\\
 \years{2018a}\emph{Transactions on Computing Education}. ACM.\\
-\years{2017}\emph{Journal of Audio Engineering Society}. Audio Engineering Society.\\
+\years{2017}\emph{Journal of Audio Engineering Society}. Audio Engineering Society (2017, 2022).\\
 \years{2016b}\emph{Interacting with Computers}. Oxford Journals.\\
 \years{2016a}\emph{Qualitative Research}. Sage Publications.\\
 \years{2015}\emph{International Journal of Human-Computer Studies}. Elsevier.
