--- a/Xambo.brief.CV.tex
+++ b/Xambo.brief.CV.tex
@@ -107,7 +107,7 @@ Senior Lecturer, DMU, 2020--present. I am teaching undergraduate courses in audi
 I have been associate professor, Norwegian University of Science and Technology (NTNU) (2018--19) where I also was Music Communication \& Technology (MCT) master programme council leader and MCT programme study leader at NTNU, visiting lecturer and postdoc at Queen Mary University of London (2017--19) and postdoc at Georgia Tech (2015--17). Also, I have been co-founder and chair of the organization Women Nordic Music Technology (WoNoMute) (2018--19) and co-founder and co-chair of the organization Women in Music Tech at Georgia Tech (2016--17). From 2013--14, I was a research fellow at the London Knowledge Lab, University College London Institute of Education.
 I have been working since 2000 as interaction designer, web designer and web developer with strong background on Internet technologies. I have been employee in companies for 10 years (2000--10) as well as co-founder of my own interactive media studio (2004--10).\\
 
-{\textbf{Grants/Awards/Accolades}} from DMU Future Research Leaders Programme (2021-22); HDI/EPSRC (2020--21); NTNU (2019, 2018--20); Sonic Arts Research Center (2018); NCWIT (2017); NSF AISL (2016); WiMIR (2016); OU (2010--13, 2010); Fund. Caixa de Sabadell (2003--04); and Generalitat de Catalunya (1998--99, 2001--02).\\
+{\textbf{Grants/Awards/Accolades}} from DMU Living in a Digital Society Spotlight (2022); DMU Future Research Leaders Programme (2021-22); HDI/EPSRC (2020--21); NTNU (2019, 2018--20); Sonic Arts Research Center (2018); NCWIT (2017); NSF AISL (2016); WiMIR (2016); OU (2010--13, 2010); Fund. Caixa de Sabadell (2003--04); and Generalitat de Catalunya (1998--99, 2001--02).\\
 
 {\textbf{Peer-Reviewed Journal Publications}} in MDPI (2021); Computer Music Journal (2019); Journal of Audio Engineering Society (2018, 2020); Interacting with Computers (2017); International Journal of Social Research Methodology, (2017); Qualitative Research (2017); ACM Transactions on Computer-Human Interaction (2013); and Information Processing \& Management (2013).\\
 
@@ -119,7 +119,7 @@ I have been working since 2000 as interaction designer, web designer and web dev
 
 {\textbf{Conference Organizer}} for WAC (2019, general co-chair; 2017, session chair; 2016, music/artworks co-chair); NIME (2019, paper co-chair, session chair); ICLI (2020, conference local committee member); Computational Creativity (2017, local committee member).\\
 
-{\textbf{Interviews/Press Coverage}} in OnCurating.org (2020); Ballade.no (2019); Girls Geek Dinner Trondheim (2019); ACM Interactions (2018); Netlabel Interview Project (2018); and Wallifornia Music Tech (2018).\\
+{\textbf{Interviews/Press Coverage}} in The Wire (2022); OnCurating.org (2020); Ballade.no (2019); Girls Geek Dinner Trondheim (2019); ACM Interactions (2018); Netlabel Interview Project (2018); and Wallifornia Music Tech (2018).\\
 
 {\textbf{Research Visits}} at Filmuniversität Babelsberg KONRAD WOLF (2018--2019); University of Strathclyde (2011--12); UPF (2011); and OU (2010).\\
 
